iptables-for-all.txt
############
# IPTables #
############

*filter
:INPUT ACCEPT [91:15645]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [132:28522]
#
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
###
### BNGA office ###
-A INPUT -m state -s 65.87.26.0/24    --state NEW -j ACCEPT
-A INPUT -m state -s 64.95.137.172/32 --state NEW -j ACCEPT
#
###
### Apark Home ###
-A INPUT -m state -s 73.231.235.144/32 --state NEW -j ACCEPT
###
#
### BNER ###
-A INPUT -m state -s 87.243.5.176/28   --state NEW -j ACCEPT
-A INPUT -m state -s 89.37.122.128/29  --state NEW -j ACCEPT
-A INPUT -m state -s 89.37.124.86/29   --state NEW -j ACCEPT
-A INPUT -m state -s 162.243.3.59/32   --state NEW -j ACCEPT
#
### RR-US-Lobby ###
##
#
###
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
###
COMMIT




# CentOS7 Iptables install
sudo yum -y install iptables-services
sudo systemctl enable iptables 
sudo systemctl mask firewalld
sudo systemctl stop firewalld
sudo systemctl start iptables
